# endnote-exporter

./: .gitignore  CLAUDE.md  README.md  electron.vite.config.ts  endnote_exporter.py  gui.py  main.py  package-lock.json  package.json  platform_utils.py  playwright.config.ts  pyproject.toml  tsconfig.json  tsconfig.node.json  tsconfig.web.json
.github/workflows/: ci.yml  pages.yml  release.yml  web-ci.yml
docs/: cross-platform-compatibility_PLAN.md  local-web-execution_PLAN.md  platform-and-web-port_PLAN.md  web-ui-ux-refresh_PLAN.md
docs/cross-platform-compatibility/plans/: plan_a_conservative.md  plan_b_balanced.md  plan_c_aggressive.md
docs/cross-platform-compatibility/research/: 04_style_patterns.md
docs/cross-platform-compatibility/reviews/: review_1.md  review_2.md
docs/local-web-execution/: attachment-policy.md  contracts.md  conversion-spec.md  fallback-decision.md  feasibility.md  parity-rules.md  performance-thresholds.md  privacy.md  release-ops.md  rollback.md  support-matrix.md  troubleshooting.md  user-guide.md
docs/local-web-execution/distribution/: electron.md  (+2 more)
docs/web-ui-ux-refresh/: baseline-audit.md  contract-freeze.md
src/main/: EndnoteExporter.ts  index.ts
src/preload/: index.ts
src/shared/: ipcChannels.ts
testing/browser-local/: README.md  build_fixture_corpus.py  fixture-manifest.json  test_fixture_harness.py
testing/endnote-example-library/: MyLibrary.enl
web/: .gitignore  IMPLEMENTATION_PLAN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: main.ts  styles.css
(+94 files in other folders)
