[project]
name = "endnote-exporter"
version = "1.1.0"
authors = [
    { name = "Samuel Mok", email = "s.mok@utwente.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru",
    "pyinstaller",
    "flet",
]


[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.setuptools]
py-modules = ["main", "endnote_exporter"]
